--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Master Hacker Tool</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: black;
+      color: red;
+      font-family: 'Courier New', Courier, monospace;
+      text-align: center;
+    }
+    h1 {
+      font-size: 30px;
+      margin-top: 60px;
+      text-shadow: 0 0 10px red;
+    }
+    p {
+      font-size: 18px;
+      margin-top: 20px;
+    }
+    .box {
+      border: 2px solid red;
+      padding: 20px;
+      margin: 30px;
+      border-radius: 10px;
+      background-color: #111;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Master Hacker Tool</h1>
-    <p>Paste target link below:</p>
-    <input type="text" id="target" placeholder="Enter link here...">
-    <button onclick="generate()">Generate Link</button>
-    <p id="result"></p>
+  <h1>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</h1>
+  <div class="box">
+    <p><strong>MASTER</strong></p>
+    <p><strong>HACKER</strong></p>
+    <p><strong>HACKING</strong></p>
+    <p><strong>TOOL</strong></p>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
