--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: black;
-      color: red;
-      font-family: 'Courier New', Courier, monospace;
-      text-align: center;
-    }
-    h1 {
-      font-size: 30px;
-      margin-top: 60px;
-      text-shadow: 0 0 10px red;
-    }
-    p {
-      font-size: 18px;
-      margin-top: 20px;
-    }
-    .box {
-      border: 2px solid red;
-      padding: 20px;
-      margin: 30px;
-      border-radius: 10px;
-      background-color: #111;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</h1>
-  <div class="box">
-    <p><strong>MASTER</strong></p>
-    <p><strong>HACKER</strong></p>
-    <p><strong>HACKING</strong></p>
-    <p><strong>TOOL</strong></p>
+  <div class="container">
+    <h1>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</h1>
+    <p>Paste target link below:</p>
+    <input type="text" id="target" placeholder="Enter link here...">
+    <button onclick="generate()">Generate Link</button>
+    <p id="result"></p>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
+<!𝗗𝗢𝗖𝗧𝗬𝗣𝗘 𝗵𝘁𝗺𝗹>
+<𝗵𝘁𝗺𝗹 𝗹𝗮𝗻𝗴="𝗲𝗻">
+<𝗵𝗲𝗮𝗱>
+  <𝗺𝗲𝘁𝗮 𝗰𝗵𝗮𝗿𝘀𝗲𝘁="𝗨𝗧𝗙-𝟴">
+  <𝘁𝗶𝘁𝗹𝗲>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</𝘁𝗶𝘁𝗹𝗲>
+  <𝘀𝘁𝘆𝗹𝗲>
+    𝗯𝗼𝗱𝘆 {
+      𝗺𝗮𝗿𝗴𝗶𝗻: 𝟬;
+      𝗽𝗮𝗱𝗱𝗶𝗻𝗴: 𝟬;
+      𝗯𝗮𝗰𝗸𝗴𝗿𝗼𝘂𝗻𝗱-𝗰𝗼𝗹𝗼𝗿: 𝗯𝗹𝗮𝗰𝗸;
+      𝗰𝗼𝗹𝗼𝗿: 𝗿𝗲𝗱;
+      𝗳𝗼𝗻𝘁-𝗳𝗮𝗺𝗶𝗹𝘆: '𝗖𝗼𝘂𝗿𝗶𝗲𝗿 𝗡𝗲𝘄', 𝗖𝗼𝘂𝗿𝗶𝗲𝗿, 𝗺𝗼𝗻𝗼𝘀𝗽𝗮𝗰𝗲;
+      𝘁𝗲𝘅𝘁-𝗮𝗹𝗶𝗴𝗻: 𝗰𝗲𝗻𝘁𝗲𝗿;
+    }
+    𝗵𝟭 {
+      𝗳𝗼𝗻𝘁-𝘀𝗶𝘇𝗲: 𝟯𝟬𝗽𝘅;
+      𝗺𝗮𝗿𝗴𝗶𝗻-𝘁𝗼𝗽: 𝟲𝟬𝗽𝘅;
+      𝘁𝗲𝘅𝘁-𝘀𝗵𝗮𝗱𝗼𝘄: 𝟬 𝟬 𝟭𝟬𝗽𝘅 𝗿𝗲𝗱;
+    }
+    𝗽 {
+      𝗳𝗼𝗻𝘁-𝘀𝗶𝘇𝗲: 𝟭𝟴𝗽𝘅;
+      𝗺𝗮𝗿𝗴𝗶𝗻-𝘁𝗼𝗽: 𝟮𝟬𝗽𝘅;
+    }
+    .𝗯𝗼𝘅 {
+      𝗯𝗼𝗿𝗱𝗲𝗿: 𝟮𝗽𝘅 𝘀𝗼𝗹𝗶𝗱 𝗿𝗲𝗱;
+      𝗽𝗮𝗱𝗱𝗶𝗻𝗴: 𝟮𝟬𝗽𝘅;
+      𝗺𝗮𝗿𝗴𝗶𝗻: 𝟯𝟬𝗽𝘅;
+      𝗯𝗼𝗿𝗱𝗲𝗿-𝗿𝗮𝗱𝗶𝘂𝘀: 𝟭𝟬𝗽𝘅;
+      𝗯𝗮𝗰𝗸𝗴𝗿𝗼𝘂𝗻𝗱-𝗰𝗼𝗹𝗼𝗿: #𝟭𝟭𝟭;
+    }
+  </𝘀𝘁𝘆𝗹𝗲>
+</𝗵𝗲𝗮𝗱>
+<𝗯𝗼𝗱𝘆>
+  <𝗵𝟭>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</𝗵𝟭>
+  <𝗱𝗶𝘃 𝗰𝗹𝗮𝘀𝘀="𝗯𝗼𝘅">
+    <𝗽><𝘀𝘁𝗿𝗼𝗻𝗴>𝗠𝗔𝗦𝗧𝗘𝗥</𝘀𝘁𝗿𝗼𝗻𝗴></𝗽>
+    <𝗽><𝘀𝘁𝗿𝗼𝗻𝗴>𝗛𝗔𝗖𝗞𝗘𝗥</𝘀𝘁𝗿𝗼𝗻𝗴></𝗽>
+    <𝗽><𝘀𝘁𝗿𝗼𝗻𝗴>𝗛𝗔𝗖𝗞𝗜𝗡𝗚</𝘀𝘁𝗿𝗼𝗻𝗴></𝗽>
+    <𝗽><𝘀𝘁𝗿𝗼𝗻𝗴>𝗧𝗢𝗢𝗟</𝘀𝘁𝗿𝗼𝗻𝗴></𝗽>
+  </𝗱𝗶𝘃>
+</𝗯𝗼𝗱𝘆>
+</𝗵𝘁𝗺𝗹>
