--- a/index.html
+++ b/index.html
@@ -1,76 +1,86 @@
 <!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            color: red;
-            font-size: 2.5rem;
-        }
-        input, button {
-            padding: 10px;
-            font-size: 1rem;
-            margin: 10px;
-            border-radius: 5px;
-            border: none;
-        }
-        input {
-            width: 80%;
-        }
-        button {
-            background-color: red;
-            color: white;
-            cursor: pointer;
-        }
-        .result-box {
-            margin-top: 30px;
-            padding: 20px;
-            background: #111;
-            border: 1px solid red;
-            border-radius: 10px;
-        }
-        .contact-box {
-            margin-top: 40px;
-            font-size: 1rem;
-            color: #aaa;
-        }
-    </style>
-</head>
-<body><h1>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗦𝗜𝗠 𝗗𝗔𝗧𝗔𝗕𝗔𝗦𝗘 𝗧𝗢𝗢𝗟</h1>
-<p>Enter any number to get details</p>
-
-<input type="text" id="phoneInput" placeholder="Enter Phone Number">
-<button onclick="generateDetails()">Generate</button>
-
-<div id="result" class="result-box" style="display:none">
-    <p><strong>Name:</strong> Ali Khan</p>
-    <p><strong>CNIC:</strong> 35201-1234567-8</p>
-    <p><strong>Address:</strong> Lahore, Punjab, Pakistan</p>
-    <p><strong>SIM Registered:</strong> Jazz</p>
-</div>
-
-<div class="contact-box">
-    <p>For more info contact: <strong>0300-1234567</strong></p>
-</div>
-
-<script>
-    function generateDetails() {
-        const input = document.getElementById("phoneInput").value;
-        if(input.trim() !== "") {
-            document.getElementById("result").style.display = "block";
-        } else {
-            alert("Please enter a number.");
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗦𝗜𝗠 𝗗𝗔𝗧𝗔𝗕𝗔𝗦𝗘 𝗧𝗢𝗢𝗟</title>
+  <style>
+    body {
+      background-color: #0b0b0b;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+      padding: 40px;
     }
-</script>
+    h1 {
+      color: #ff0000;
+    }
+    input[type="text"] {
+      padding: 10px;
+      width: 300px;
+      border: none;
+      border-radius: 5px;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #ff0000;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-left: 10px;
+    }
+    .result {
+      margin-top: 30px;
+      background: #1a1a1a;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .contact {
+      margin-top: 50px;
+      font-size: 16px;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+  <h1>𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 𝗧𝗢𝗢𝗟</h1>
+  <p>Enter Phone Number (with country code):</p>
+  <input type="text" id="phone" placeholder="e.g. +923001234567" />
+  <button onclick="getPhoneInfo()">Get Details</button>  <div class="result" id="result"></div>  <div class="contact">Contact: +923049876543</div>  <script>
+    async function getPhoneInfo() {
+      const phone = document.getElementById("phone").value.trim();
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = "Fetching details...";
 
-</body>
+      if (!phone.startsWith('+')) {
+        resultDiv.innerHTML = "Please enter phone number with country code (e.g. +92...)";
+        return;
+      }
+
+      try {
+        const res = await fetch(`https://api.apilayer.com/number_verification/validate?number=${phone}`, {
+          method: "GET",
+          headers: {
+            "apikey": "YOUR_API_KEY_HERE"
+          }
+        });
+        const data = await res.json();
+
+        if (data.valid) {
+          resultDiv.innerHTML = `
+            <strong>Number:</strong> ${data.international_format} <br>
+            <strong>Country:</strong> ${data.country_name} (${data.country_code})<br>
+            <strong>Location:</strong> ${data.location}<br>
+            <strong>Carrier:</strong> ${data.carrier}<br>
+            <strong>Line Type:</strong> ${data.line_type}<br>
+          `;
+        } else {
+          resultDiv.innerHTML = "Number is invalid or data not available.";
+        }
+      } catch (err) {
+        resultDiv.innerHTML = "Error fetching data.";
+        console.error(err);
+      }
+    }
+  </script></body>
 </html>
