--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Unban Tool</title>
+    <title>WhatsApp Unban Tool - MASTER HACKER</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>WHATSAPP UNBAN TOOL</h1>
+        <h1 class="logo-text">𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥</h1>
+        <h2>WHATSAPP UNBAN TOOL</h2>
 
         <div class="form-section">
             <label for="unban-option">SELECT UNBAN OPTION</label>
@@ -20,22 +22,28 @@
 
         <div class="form-section">
             <label for="phone-number">ENTER NUMBER</label>
-            <input type="text" id="phone-number" placeholder="eg: +923xxx">
+            <input type="text" id="phone-number" placeholder="eg: +923xxxxxxx">
         </div>
 
         <div class="form-section">
             <label for="prompt-option">SELECT PROMPT</label>
             <select id="prompt-option">
-                <option value="standard">PROMPT 1: Standard Unban Request</option>
-                <option value="apology">PROMPT 2: Apology and Unban Request</option>
+                <option value="standard">Standard Unban Request</option>
+                <option value="apology">Apology & Request</option>
+                <option value="false-ban">False Ban Claim</option>
+                <option value="data-loss">Data Loss Concern</option>
             </select>
         </div>
 
         <button id="send-request-btn">SEND UNBAN REQUEST</button>
+
+        <a href="https://whatsapp.com/channel/0029VbAigTSJkK7HbvMv6s3F" target="_blank" class="channel-link">
+            JOIN MY CHANNEL
+        </a>
     </div>
 
     <footer>
-        <p>DEVELOPED BY YOUR NAME 𝗠𝗔𝗦𝗧𝗘𝗥 𝗛𝗔𝗖𝗞𝗘𝗥 | ©2025 | ALL SYSTEMS OPERATIONAL</p>
+        <p>DEVELOPED BY MASTER HACKER | ©2025 | ALL SYSTEMS OPERATIONAL</p>
     </footer>
 
     <script src="script.js"></script>
