--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+<body style="background-image: url('images/bg.jpg'); background-size: cover;">
